# leetcode-compensation

./: .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  config.toml  index.html  label_rules.ipynb  main.py  package-lock.json  package.json  pyproject.toml  regex_matches.ipynb  requirements.txt  script.js
.github/ISSUE_TEMPLATE/: 🛠-report-wrong-data.md
.github/workflows/: data-refresh.yaml  sync-data.yml
data/: company_map.json  final_data.json  location_map.json  oct_23.json  parsed_comps.json  parsed_comps.jsonl  parsed_posts.jsonl  parsed_temp.jsonl  posts.jsonl  raw_comps.jsonl  role_map.json  sync_report.md
data/mappings/: lc_company.json  lc_location.csv  lc_location.json  lc_title.csv  (+3 more)
info/: all_info.py  clean_info.py  label_rules.py  suggestions.py
lc/: comps.py
leetcode/: all_info.py  clean_info.py  label_rules.py  posts.py  posts_meta.py  scraper.py  suggestions.py
leetcomp/: consts.py  errors.py  parse.py  prompts.py  queries.py  refresh.py  santise.py  utils.py
ner/: label_extractor.py  label_prep.py  label_rules.py  ner.py
posts/: 1274262.txt  1276811.txt  1277123.txt  1279474.txt  1279536.txt  1279948.txt  1279995.txt  1280581.txt  1281604.txt  1281715.txt
reports/: plots.py  plots_tc.py  plots_total.py  report.py  report_dark.py  report_dark_total.py  report_total.py
scripts/: plots.py  plots_total.py  report.py  report_dark.py  report_dark_total.py  report_total.py
tests/: __init__.py  test_parse.py  test_posts.py
utils/: constant.py  utils.py
venv_lc/: pyvenv.cfg
(+12533 files in other folders)
