[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = ["httpx", "openai>=2.14.0", "pydantic>=2.12.5"]
description = "Add your description here"
name = "leetcode-comp"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
leetcomp-sync = "leetcomp.sync:sync"

[tool.hatch.build.targets.wheel]
packages = ["src/leetcomp"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.ruff]
line-length = 90

[tool.ruff.format]
line-ending = "auto"
